# careshield-knowledge-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/: streamlit_app.py
docs/: architecture.md  examples.md  interview-talk-track.md  learning-talk-track.md  security.md  setup-guide.md
evals/: golden_dataset.json
examples/: synthetic-care-report.docx  synthetic-care-report.md
src/careshield/: __init__.py  __main__.py  api.py  app.py  cli.py  data.py  embeddings.py  evals.py  gateway.py  ingestion.py  pii.py  policy.py  retrieval.py  schemas.py  tracing.py  vector_store.py
src/careshield/contracts/: __init__.py  schema.py  schemas.py
src/careshield/guardrails/: __init__.py  evals.py  pii.py  policy.py
src/careshield/interfaces/: __init__.py  api.py  cli.py
src/careshield/pipeline/: __init__.py  assistant.py  gateway.py  tracing.py
src/careshield/retrieval/: __init__.py  chroma_store.py  data.py  embeddings.py  ingestion.py  keyword.py  vector_store.py
tests/: test_api.py  test_app.py  test_document_analysis.py  test_evals.py  test_gateway.py  test_golden_evals.py  test_ingestion.py  test_pii.py  test_policy.py  test_retrieval.py  test_schema.py  test_tracing.py
tools/: build_example_documents.py
