[project]
name = "careshield-knowledge-assistant"
version = "0.1.0"
description = "A tiny governed GenAI/RAG learning app with document ingestion, vector retrieval, PII redaction, structured outputs, evals, and traces."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=1.5.9",
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "pypdf>=6.12.2",
  "python-docx>=1.2.0",
  "python-multipart>=0.0.29",
  "uvicorn>=0.30.0",
]

[project.scripts]
careshield = "careshield.interfaces.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/careshield"]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "mypy>=2.1.0",
  "pytest>=8.2.0",
  "ruff>=0.15.15",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
  "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["docx", "pypdf", "chromadb", "chromadb.*"]
ignore_missing_imports = true
