[project]
name = "careshield-knowledge-assistant"
version = "0.1.0"
description = "A tiny governed GenAI/RAG learning app with document ingestion, vector retrieval, PII redaction, structured outputs, evals, and traces."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.43.18",
  "chromadb>=0.6.3,<1.0.0",
  "fastapi>=0.115.0",
  "opentelemetry-sdk>=1.42.1",
  "posthog<6",
  "pydantic>=2.8.0",
  "pypdf>=6.12.2",
  "python-docx>=1.2.0",
  "python-multipart>=0.0.29",
  "uvicorn>=0.30.0",
]

[project.scripts]
careshield = "careshield.interfaces.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/careshield"]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "mypy>=2.1.0",
  "pip-audit>=2.10.0",
  "pytest>=8.2.0",
  "ruff>=0.15.15",
  "streamlit>=1.58.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
  "ignore::starlette.exceptions.StarletteDeprecationWarning",
  "ignore:Accessing the 'model_fields' attribute on the instance is deprecated:pydantic.PydanticDeprecatedSince211",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = [
  "ARG",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "PTH",
  "RET",
  "RUF",
  "SIM",
  "UP",
]
ignore = [
  "B008",
]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["boto3", "docx", "pypdf", "chromadb", "chromadb.*"]
ignore_missing_imports = true
